2003-02-25  Derek Price  <derek@ximbiot.com>

	* cvs.h (user_admin_options): New global config option.
	* admin.c (admin): Handle user_admin_options.
	* parseinfo.c (parse_config): Handle UserAdminOptions.
	(Original patch from Dan Peterson <dbpete@aol.com>.)

2003-02-25  Derek Price  <derek@ximbiot.com>

	* watch.c (watch_usage): Use {} rather than () for literals.

2003-02-21  Larry Jones  <lawrence.jones@eds.com>

	* server.c (switch_to_user): Update comment, change error message
	so it's not an exact duplicate of the one in check_password.
	(check_repository_password): Add syslog call for password mismatches.
	(check_password): Add syslog call for password mismatches, rearrange
	code to simplify and eliminate redundancy.
	(pserver_authenticate_connection): Remove syslog call, now done by
	lower-level routines.

2003-02-19  Larry Jones  <lawrence.jones@eds.com>

	* sanity.sh (admin-10): Add test for repository files not in
	working directory.

	* admin.c (admin_fileproc): Fix crash when no rcs file, return
	failure status for bogus files.
	* sanity.sh (admin-4a): Test for above.
	(Original patch submitted by Mark D. Baushke <mdb@cvshome.org>).

2003-02-14  Larry Jones  <lawrence.jones@eds.com>

	* log.c (log_expand_revlist): Fix crashes in error cases.
	(Reported by Bart Santy <Bart.Santy@switch.be>.)
	* sanity.sh (log): New tests for above.

2003-02-14  Derek Price  <derek@ximbiot.com>

	* watch.c (watch_usage): Make the repeatability of -a part of the
	usage spec.

2003-02-14  Derek Price  <derek@ximbiot.com>

	* watch.c (watch_usage): Mention default for -a.  Mention multiple
	invocations of -a.  Mention -R as default.  Use required () rather than
	optional [] around watch subcommand list in invocation spec.  Use
	`path' instead of `file'.  Put variable <> around `action' and `path'.

2003-02-12  Derek Price  <derek@ximbiot.com>

	* main.c (main): Update copyright message to 2003.

2003-02-08  Derek Price  <derek@ximbiot.com>
